src/content_script/css/websites-sources.scss
/*
  Hightlight of the email address found on the page
*/

.hunter-email {
  background-color: yellow;
  color: #222;
  display: inline-block;
  padding: 1px 3px;
}

/*
  Pointer of Hunter that shows the email address found
*/

#hunter-email-pointer {
  display: none;
  position: absolute;
  width: 50px;
  -webkit-filter: drop-shadow(0px 1px 2px rgba(0,0,0,0.5));
  z-index: 1000001;
  border: 0;
  margin: 0;
  padding: 0;
}

/*
  Message that indicates the status of the search of the email address on the
  page.
*/

#hunter-email-status {
  display: none;
  position: fixed;
  box-sizing: content-box;
  right: 20px;
  top: 20px;
  background-color: #fff;
  color: #fff;
  border: 0;
  border-radius: 8px;
  padding: 25px;
  font-size: 13px;
  width: 280px;
  height: 100px;
  box-shadow: 0 0px 40px 0px rgba(0,0,0,0.3);
  z-index: 1000000001;
}

#hunter-email-status-close {
  display: none;
  position: fixed;
  right: 47px;
  top: 39px;
  font-size: 20px;
  color: #aaa;
  z-index: 1000000002;
}

#hunter-email-status-close:hover {
  cursor: pointer;
  color: #888;
}

